pyfhirsdc/lexer/fhirpathParser.py
# Generated from fhirpath.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class fhirpathParser ( Parser ):

    grammarFileName = "fhirpath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'div'", "'mod'", "'&'", "'is'", "'as'", "'|'", 
                     "'<='", "'<'", "'>'", "'>='", "'='", "'~'", "'!='", 
                     "'!~'", "'in'", "'contains'", "'and'", "'or'", "'xor'", 
                     "'implies'", "'o'", "'v'", "'c'", "'<<'", "'!<<'", 
                     "'('", "')'", "'{'", "'}'", "'true'", "'false'", "'%'", 
                     "'$this'", "'$index'", "'$total'", "','", "'year'", 
                     "'month'", "'week'", "'day'", "'hour'", "'minute'", 
                     "'second'", "'millisecond'", "'years'", "'months'", 
                     "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'", 
                     "'milliseconds'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "DATE", "DATETIME", "TIME", "IDENTIFIER", "DELIMITEDIDENTIFIER", 
                      "QUOTEDIDENTIFIER", "STRING", "NUMBER", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_expression = 0
    RULE_pysdcexpression = 1
    RULE_term = 2
    RULE_literal = 3
    RULE_externalConstant = 4
    RULE_invocation = 5
    RULE_function = 6
    RULE_paramList = 7
    RULE_quantity = 8
    RULE_unit = 9
    RULE_dateTimePrecision = 10
    RULE_pluralDateTimePrecision = 11
    RULE_typeSpecifier = 12
    RULE_qualifiedIdentifier = 13
    RULE_identifier = 14

    ruleNames =  [ "expression", "pysdcexpression", "term", "literal", "externalConstant", 
                   "invocation", "function", "paramList", "quantity", "unit", 
                   "dateTimePrecision", "pluralDateTimePrecision", "typeSpecifier", 
                   "qualifiedIdentifier", "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    DATE=60
    DATETIME=61
    TIME=62
    IDENTIFIER=63
    DELIMITEDIDENTIFIER=64
    QUOTEDIDENTIFIER=65
    STRING=66
    NUMBER=67
    WS=68
    COMMENT=69
    LINE_COMMENT=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pysdcexpression(self):
            return self.getTypedRuleContext(fhirpathParser.PysdcexpressionContext,0)


        def term(self):
            return self.getTypedRuleContext(fhirpathParser.TermContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fhirpathParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(fhirpathParser.ExpressionContext,i)


        def invocation(self):
            return self.getTypedRuleContext(fhirpathParser.InvocationContext,0)


        def typeSpecifier(self):
            return self.getTypedRuleContext(fhirpathParser.TypeSpecifierContext,0)


        def getRuleIndex(self):
            return fhirpathParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = fhirpathParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [fhirpathParser.T__27, fhirpathParser.T__28, fhirpathParser.T__29, fhirpathParser.QUOTEDIDENTIFIER]:
                self.state = 31
                self.pysdcexpression()
                pass
            elif token in [fhirpathParser.T__10, fhirpathParser.T__11, fhirpathParser.T__21, fhirpathParser.T__22, fhirpathParser.T__32, fhirpathParser.T__34, fhirpathParser.T__36, fhirpathParser.T__37, fhirpathParser.T__38, fhirpathParser.T__39, fhirpathParser.T__40, fhirpathParser.T__41, fhirpathParser.DATE, fhirpathParser.DATETIME, fhirpathParser.TIME, fhirpathParser.IDENTIFIER, fhirpathParser.DELIMITEDIDENTIFIER, fhirpathParser.STRING, fhirpathParser.NUMBER]:
                self.state = 32
                self.term()
                pass
            elif token in [fhirpathParser.T__3, fhirpathParser.T__4]:
                self.state = 33
                _la = self._input.LA(1)
                if not(_la==fhirpathParser.T__3 or _la==fhirpathParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 34
                self.expression(11)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 75
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 37
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 38
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__5) | (1 << fhirpathParser.T__6) | (1 << fhirpathParser.T__7) | (1 << fhirpathParser.T__8))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 39
                        self.expression(11)
                        pass

                    elif la_ == 2:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 40
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 41
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__3) | (1 << fhirpathParser.T__4) | (1 << fhirpathParser.T__9))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 42
                        self.expression(10)
                        pass

                    elif la_ == 3:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 43
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 44
                        self.match(fhirpathParser.T__12)
                        self.state = 45
                        self.expression(8)
                        pass

                    elif la_ == 4:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 46
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 47
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__13) | (1 << fhirpathParser.T__14) | (1 << fhirpathParser.T__15) | (1 << fhirpathParser.T__16))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 48
                        self.expression(7)
                        pass

                    elif la_ == 5:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 49
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 50
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__17) | (1 << fhirpathParser.T__18) | (1 << fhirpathParser.T__19) | (1 << fhirpathParser.T__20))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 51
                        self.expression(6)
                        pass

                    elif la_ == 6:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 52
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 53
                        _la = self._input.LA(1)
                        if not(_la==fhirpathParser.T__21 or _la==fhirpathParser.T__22):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 54
                        self.expression(5)
                        pass

                    elif la_ == 7:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 55
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 56
                        self.match(fhirpathParser.T__23)
                        self.state = 57
                        self.expression(4)
                        pass

                    elif la_ == 8:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 58
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 59
                        _la = self._input.LA(1)
                        if not(_la==fhirpathParser.T__24 or _la==fhirpathParser.T__25):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 60
                        self.expression(3)
                        pass

                    elif la_ == 9:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 61
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 62
                        self.match(fhirpathParser.T__26)
                        self.state = 63
                        self.expression(2)
                        pass

                    elif la_ == 10:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 64
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 65
                        self.match(fhirpathParser.T__0)
                        self.state = 66
                        self.invocation()
                        pass

                    elif la_ == 11:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 67
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 68
                        self.match(fhirpathParser.T__1)
                        self.state = 69
                        self.expression(0)
                        self.state = 70
                        self.match(fhirpathParser.T__2)
                        pass

                    elif la_ == 12:
                        localctx = fhirpathParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 72
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 73
                        _la = self._input.LA(1)
                        if not(_la==fhirpathParser.T__10 or _la==fhirpathParser.T__11):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 74
                        self.typeSpecifier()
                        pass

             
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PysdcexpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return fhirpathParser.RULE_pysdcexpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Pse2Context(PysdcexpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fhirpathParser.PysdcexpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def QUOTEDIDENTIFIER(self):
            return self.getToken(fhirpathParser.QUOTEDIDENTIFIER, 0)
        def literal(self):
            return self.getTypedRuleContext(fhirpathParser.LiteralContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPse2" ):
                listener.enterPse2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPse2" ):
                listener.exitPse2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPse2" ):
                return visitor.visitPse2(self)
            else:
                return visitor.visitChildren(self)


    class Pse1Context(PysdcexpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a fhirpathParser.PysdcexpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def QUOTEDIDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(fhirpathParser.QUOTEDIDENTIFIER)
            else:
                return self.getToken(fhirpathParser.QUOTEDIDENTIFIER, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPse1" ):
                listener.enterPse1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPse1" ):
                listener.exitPse1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPse1" ):
                return visitor.visitPse1(self)
            else:
                return visitor.visitChildren(self)



    def pysdcexpression(self):

        localctx = fhirpathParser.PysdcexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pysdcexpression)
        self._la = 0 # Token type
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = fhirpathParser.Pse1Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__27) | (1 << fhirpathParser.T__28) | (1 << fhirpathParser.T__29))) != 0):
                    self.state = 80
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__27) | (1 << fhirpathParser.T__28) | (1 << fhirpathParser.T__29))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 83
                self.match(fhirpathParser.QUOTEDIDENTIFIER)
                self.state = 84
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__17) | (1 << fhirpathParser.T__19) | (1 << fhirpathParser.T__30) | (1 << fhirpathParser.T__31))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==fhirpathParser.T__27 or _la==fhirpathParser.T__28:
                    self.state = 85
                    _la = self._input.LA(1)
                    if not(_la==fhirpathParser.T__27 or _la==fhirpathParser.T__28):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 88
                self.match(fhirpathParser.QUOTEDIDENTIFIER)
                pass

            elif la_ == 2:
                localctx = fhirpathParser.Pse2Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__27) | (1 << fhirpathParser.T__28) | (1 << fhirpathParser.T__29))) != 0):
                    self.state = 89
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__27) | (1 << fhirpathParser.T__28) | (1 << fhirpathParser.T__29))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 92
                self.match(fhirpathParser.QUOTEDIDENTIFIER)
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 93
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fhirpathParser.T__13) | (1 << fhirpathParser.T__14) | (1 << fhirpathParser.T__15) | (1 << fhirpathParser.T__16) | (1 << fhirpathParser.T__17) | (1 << fhirpathParser.T__19))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 94
                    self.literal()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invocation(self):
            return self.getTypedRuleContext(fhirpathParser.InvocationContext,0)


        def literal(self):
            return self.getTypedRuleContext(fhirpathParser.LiteralContext,0)


        def externalConstant(self):
            return self.getTypedRuleContext(fhirpathParser.ExternalConstantContext,0)


        def expression(self):
            return self.getTypedRuleContext(fhirpathParser.ExpressionContext,0)


        def getRuleIndex(self):
            return fhirpathParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = fhirpathParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_term)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [fhirpathParser.T__10, fhirpathParser.T__11, fhirpathParser.T__21, fhirpathParser.T__22, fhirpathParser.T__39, fhirpathParser.T__40, fhirpathParser.T__41, fhirpathParser.IDENTIFIER, fhirpathParser.DELIMITEDIDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.invocation()
                pass
            elif token in [fhirpathParser.T__34, fhirpathParser.T__36, fhirpathParser.T__37, fhirpathParser.DATE, fhirpathParser.DATETIME, fhirpathParser.TIME, fhirpathParser.STRING, fhirpathParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.literal()
                pass
            elif token in [fhirpathParser.T__38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.externalConstant()
                pass
            elif token in [fhirpathParser.T__32]:
                self.enterOuterAlt(localctx, 4)
                self.state = 102
                self.match(fhirpathParser.T__32)
                self.state = 103
                self.expression(0)
                self.state = 104
                self.match(fhirpathParser.T__33)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(fhirpathParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(fhirpathParser.NUMBER, 0)

        def DATE(self):
            return self.getToken(fhirpathParser.DATE, 0)

        def DATETIME(self):
            return self.getToken(fhirpathParser.DATETIME, 0)

        def TIME(self):
            return self.getToken(fhirpathParser.TIME, 0)

        def quantity(self):
            return self.getTypedRuleContext(fhirpathParser.QuantityContext,0)


        def getRuleIndex(self):
            return fhirpathParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = fhirpathParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(fhirpathParser.T__34)
                self.state = 109
                self.match(fhirpathParser.T__35)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                _la = self._input.LA(1)
                if not(_la==fhirpathParser.T__36 or _la==fhirpathParser.T__37):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.match(fhirpathParser.STRING)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.match(fhirpathParser.NUMBER)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 113
                self.match(fhirpathParser.DATE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.match(fhirpathParser.DATETIME)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.match(fhirpathParser.TIME)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 116
                self.quantity()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExternalConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
